configurable start and end years for the Date dimension

--- a/config/config.ini
+++ b/config/config.ini
@@ -77,5 +77,9 @@ dbase_json_dir = /etc/emadb
 # Period for periodic task execution [minutes]
 dbase_period = 5
 
+# Limit years (included) for the Date dimension (from Jan 1 to Dec 12)
+dbase_year_start = 2015
+dbase_year_end   = 2025
+
 # component log level (VERBOSE, DEBUG, INFO, WARNING, ERROR, CRITICAL, NOTSET)
 dbase_log = INFO
