updated windows stuff . Still debugging

--- a/config/config.ini
+++ b/config/config.ini
@@ -69,10 +69,11 @@ mqtt_log = INFO
 # All items in this section are reconfigurable by reload
 
 # Full Database Path File Name
-dbase_file = /var/dbase/emahistory.db
+#dbase_file = /var/dbase/emahistory.db
+dbase_file = emahistory.db
 
 # Directory where JSON data is located
-dbase_json_dir = /etc/emadb
+dbase_json_dir = config
 
 # Period for periodic task execution [minutes]
 dbase_period = 5
