moving parsing comand line options to EMADBServer

--- a/config/config.ini
+++ b/config/config.ini
@@ -31,6 +31,15 @@
 # Useful to perform online database maintenance
 on_hold = false
 
+log_to_file = yes
+log_file = C:\Temp\emadb.log
+
+# log rotation policy, either 'time' or 'size'
+log_policy = time
+
+# File Max size in bytes when rotating by size
+log_max_size = 1000000
+
 # component log level (VERBOSE, DEBUG, INFO, WARNING, ERROR, CRITICAL, NOTSET)
 generic_log = INFO
 
