--- a/config/config.ini
+++ b/config/config.ini
@@ -31,10 +31,11 @@
 # Useful to perform online database maintenance
 on_hold = false
 
+# Log File settings
 log_to_file = yes
 log_file = C:\Temp\emadb.log
 
-# log rotation policy, either 'time' or 'size'
+# log file rotation policy, either 'time' or 'size'
 log_policy = time
 
 # File Max size in bytes when rotating by size
