first windservice version that starts as a service

--- a/config/config.ini
+++ b/config/config.ini
@@ -42,7 +42,7 @@ log_policy = time
 log_max_size = 1000000
 
 # component log level (VERBOSE, DEBUG, INFO, WARNING, ERROR, CRITICAL, NOTSET)
-generic_log = INFO
+generic_log = DEBUG
 
 #------------------------------------------------------------------------#
 [MQTT]
@@ -69,7 +69,7 @@ mqtt_period = 60
 mqtt_topics= EMA/+/history/minmax , EMA/+/current/status
 
 # component log level (VERBOSE, DEBUG, INFO, WARNING, ERROR, CRITICAL, NONSET)
-mqtt_log = INFO
+mqtt_log = DEBUG
 
 #------------------------------------------------------------------------#
 
@@ -79,10 +79,10 @@ mqtt_log = INFO
 # All items in this section are reconfigurable by reload
 
 # Full Database Path File Name
-dbase_file = emahistory.db
+dbase_file = C:\Temp\emahistory.db
 
 # Directory where JSON data is located
-dbase_json_dir = config
+dbase_json_dir = C:\Documents and Settings\Rafael\emadb\config
 
 # Period for periodic task execution [minutes]
 dbase_period = 5
@@ -92,4 +92,4 @@ dbase_year_start = 2015
 dbase_year_end   = 2025
 
 # component log level (VERBOSE, DEBUG, INFO, WARNING, ERROR, CRITICAL, NOTSET)
-dbase_log = INFO
+dbase_log = DEBUG
