purge now is configurable

--- a/config/config.ini
+++ b/config/config.ini
@@ -91,5 +91,9 @@ dbase_period = 5
 dbase_year_start = 2015
 dbase_year_end   = 2025
 
+# Auto Purge RealTimeSamples table every day (at midnight UTC)
+# or let it grow
+dbase_purge = no
+
 # component log level (VERBOSE, DEBUG, INFO, WARNING, ERROR, CRITICAL, NOTSET)
 dbase_log = DEBUG
