added log and dbase subfolders for runtime operation

--- a/config/config.ini
+++ b/config/config.ini
@@ -33,7 +33,7 @@ on_hold = false
 
 # Log File settings
 log_to_file = yes
-log_file = C:\Temp\emadb.log
+log_file = C:\emadb\log\emadb.log
 
 # log file rotation policy, either 'time' or 'size'
 log_policy = time
@@ -79,10 +79,10 @@ mqtt_log = DEBUG
 # All items in this section are reconfigurable by reload
 
 # Full Database Path File Name
-dbase_file = C:\Temp\emahistory.db
+dbase_file = C:\emadb\dbase\emahistory.db
 
 # Directory where JSON data is located
-dbase_json_dir = C:\Documents and Settings\Rafael\emadb\config
+dbase_json_dir = C:\emadb\config
 
 # Period for periodic task execution [minutes]
 dbase_period = 5
