changed log levels to INFO

--- a/config/config.ini
+++ b/config/config.ini
@@ -42,7 +42,7 @@ log_policy = time
 log_max_size = 1000000
 
 # component log level (VERBOSE, DEBUG, INFO, WARNING, ERROR, CRITICAL, NOTSET)
-generic_log = DEBUG
+generic_log = INFO
 
 #------------------------------------------------------------------------#
 [MQTT]
@@ -69,7 +69,7 @@ mqtt_period = 60
 mqtt_topics= EMA/+/history/minmax , EMA/+/current/status
 
 # component log level (VERBOSE, DEBUG, INFO, WARNING, ERROR, CRITICAL, NONSET)
-mqtt_log = DEBUG
+mqtt_log = INFO
 
 #------------------------------------------------------------------------#
 
@@ -100,4 +100,4 @@ dbase_date_fmt = "%d/%m/%Y"
 dbase_purge = no
 
 # component log level (VERBOSE, DEBUG, INFO, WARNING, ERROR, CRITICAL, NOTSET)
-dbase_log = DEBUG
+dbase_log = INFO
