--- a/.gitignore
+++ b/.gitignore
@@ -3,14 +3,14 @@ build
 dist
 *.pyc
 *.pyo
+*~
 emadb/*.pyc
 emadb/*.pyo
 emadb/*~
 emadb/server/*.pyc
 emadb/server/*.pyo
-emadb/*~
+emadb/server/*~
 my*
 *.db
-*~
 dbase
 log
