gathering statistics is now optional

--- a/config/config.ini
+++ b/config/config.ini
@@ -61,7 +61,7 @@ mqtt_port = 1883
 mqtt_period = 60
 
 # MQTT topics to subscribe
-mqtt_topics= EMA/+/history/minmax , EMA/+/current/status
+mqtt_topics= EMA/+/history/minmax, EMA/+/current/status, EMA/+/average/status
 
 # component log level (VERBOSE, DEBUG, INFO, WARNING, ERROR, CRITICAL, NONSET)
 mqtt_log = INFO
@@ -93,6 +93,9 @@ dbase_date_fmt = %d/%m/%Y
 # Auto Purge RealTimeSamples table every day (at midnight UTC)
 # or let it grow
 dbase_purge = no
+
+# Gather stats in RealTimeStats and HistoryStats table
+dbase_stats = no
 
 # component log level (VERBOSE, DEBUG, INFO, WARNING, ERROR, CRITICAL, NOTSET)
 dbase_log = INFO
